# indian-startups-transformations

./: README.md  pyproject.toml
data/: temp(2).csv
notebooks/: exploration.ipynb  week2_exploration.ipynb
src/transforms/: analysis.py  analytics.py  cleaner.py  loader.py
src/transforms/patterns/: canonical.py  city.py  industry.py  investors.py
tests/: test_analysis.py  test_cleaner.py
